# trending-news-feed

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
config/: domains.json  ranking.json
scripts/: check_scores.py  publish_feed.py
src/: __init__.py  database.py  domain_filter.py  firehose.py  ranking.py  server.py  url_extractor.py
static/: styles.css
tests/: __init__.py  test_database.py  test_domain_filter.py  test_firehose.py  test_ranking.py  test_server.py  test_url_extractor.py
